@@ -3845,6 +3845,30 @@ function add_market_total() {
 	});
 }
 
+function collapse_game_list() {
+	if (window.location.pathname.match(/^\/market\/$/)) {
+		$("#browseItems .market_search_game_button_group").find("a").wrapAll("<div id='es_market_game_list'></div>");
+		$("#browseItems .market_search_sidebar_section_tip_small").append("<span style='float: right; margin-right: 11px;' id='es_market_game_toggle'>▲</span>");
+		
+		if (getValue("show_market_games_section")) {
+			$("#es_market_game_toggle").text("▼");
+			$("#es_market_game_list").hide();
+		}
+
+		$("#browseItems .market_search_sidebar_section_tip_small").on("click", function() {
+			if (getValue("show_market_games_section") == true) {
+				$("#es_market_game_toggle").text("▲");
+				$("#es_market_game_list").slideDown();
+				setValue("show_market_games_section", false);
+			} else {
+				$("#es_market_game_toggle").text("▼");
+				$("#es_market_game_list").slideUp();
+				setValue("show_market_games_section", true);
+			}
+		});
+	}
+}
+
 function add_active_total() {
 	if (window.location.pathname.match(/^\/market\/$/)) {
 		var total = 0;
@@ -8186,6 +8210,7 @@ $(document).ready(function(){
 								bind_ajax_content_highlighting();
 							});
 							add_market_total();
+							collapse_game_list();
 							add_active_total();
 							minimize_active_listings();
 							add_lowest_market_price();
