@@ -1,5 +1,6 @@
 ﻿v8.3
 -----
++ Added a toggle to the market page to hide the list of individual games
 : Fixed a layout issue that caused header links not to show properly in the Steam header
 
 
